@@ -1,62 +1,142 @@
 package utils;
 
+import controller.ContainFeaturesCheck;
 import model.EmailData;
+import org.apache.commons.csv.CSVFormat;
+import org.apache.commons.csv.CSVParser;
+import org.apache.commons.csv.CSVRecord;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * Đọc file CSV sử dụng Apache Commons CSV.
+ * Lưu ý thêm dependency vào project:
+ */
 public class ReadFile {
-    String path = "C:\\Users\\Admin\\OneDrive\\Documents\\DecisionTreeMail\\src\\main\\java\\datasets\\test2.csv";
+    String path = "src/main/java/datasets/spam_assassin.csv";
     List<EmailData> dataList = new ArrayList<>();
-    private final String[] conditionInputFree = {"miễn phí", "hàng giao nhanh", "giá cả vừa phải", "cho vay trả góp", "khuyến mãi sốc"};
-    private final String[] conditionInputStrangeLink = {"https://shopee.vn/", "https://tiki.vn/"};
-    // Kaggle
+    ContainFeaturesCheck featuresCheck = new ContainFeaturesCheck();
+
+    private final String[] conditionInputFree = {
+            "free", "limited time", "offer", "special offer", "buy now", "discount", "deal", "save", "promotion", "congratulations", "winner"
+    };
+    private final String[] conditionInputStrangeLink = {
+            "http://", "https://", "click here", "bit.ly/", "tinyurl.com", "goo.gl/"
+    };
+
+    /**
+     * Đọc file CSV theo đường dẫn truyền vào.
+     */
     public void readFromPath() throws IOException {
-        BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(new FileInputStream(path), StandardCharsets.UTF_8));
-        String lines;
-        while ((lines = bufferedReader.readLine()) != null){
-            if (lines.trim().isEmpty()) continue;
-            try {
-                // Dùng int biểu diễn 1 và 0 tương đương với true/false
-                int featureFree = containsWord(lines, conditionInputFree);
-                int featureStrangeLink = containsWord(lines, conditionInputStrangeLink);
-                int featureUpperCase = containsUpperCase(lines);
-                dataList.add(new EmailData(featureFree, featureStrangeLink, featureUpperCase));
-            } catch (NumberFormatException e){
-                System.err.println("Lỗi parse số ở dòng: " + lines);
+        if (path == null || path.isBlank()) {
+            throw new IllegalArgumentException("The file path is null or empty.");
+        }
+        File file = new File(path);
+        if (!file.exists() || !file.isFile()) {
+            throw new FileNotFoundException("The file does not exist or is not a valid file: " + path);
+        }
+        dataList.clear();
+        try (Reader reader = new InputStreamReader(new FileInputStream(path), StandardCharsets.UTF_8)) {
+            CSVParser parser = CSVFormat.DEFAULT
+                    .withFirstRecordAsHeader()
+                    .withIgnoreSurroundingSpaces()
+                    .withTrim()
+                    .parse(reader);
+
+            boolean hasHeaderText = parser.getHeaderMap().containsKey("text");
+            boolean hasHeaderTarget = parser.getHeaderMap().containsKey("target") || parser.getHeaderMap().containsKey("label");
+
+            for (CSVRecord record : parser) {
+                String rawText;
+                String rawTarget;
+
+                if (hasHeaderText) {
+                    rawText = safeGet(record, "text");
+                } else if (parser.getHeaderMap().containsKey("content")) {
+                    rawText = safeGet(record, "content");
+                } else if (parser.getHeaderMap().containsKey("message")) {
+                    rawText = safeGet(record, "message");
+                } else {
+                    rawText = record.size() > 0 ? record.get(0) : "";
+                }
+
+                if (hasHeaderTarget) {
+                    if (parser.getHeaderMap().containsKey("target")) {
+                        rawTarget = safeGet(record, "target");
+                    } else if (parser.getHeaderMap().containsKey("label")) {
+                        rawTarget = safeGet(record, "label");
+                    } else {
+                        rawTarget = "";
+                    }
+                } else {
+                    rawTarget = record.size() > 1 ? record.get(1) : "";
+                }
+
+                if (rawText == null) rawText = "";
+                if (rawTarget == null) rawTarget = "";
+
+                EmailData emailData = createEmailDataFromRaw(rawText, rawTarget);
+                dataList.add(emailData);
             }
         }
     }
 
-    // Hàm kiểm tra điều kiện từ được nhập vào và xét với các condition tương ứng
-    public int containsWord(String wordsInput, String[] patterns){
-        if (wordsInput.isBlank() || patterns == null) return 0;
-        String wordsLowerCase = wordsInput.trim().toLowerCase();
-        for (String pattern : patterns) {
-            if (wordsLowerCase.contains(pattern)) {
-                return 1;
-            }
+    /**
+     * Tạo EmailData từ rawText và rawTarget (lấy features, set label).
+     */
+    private EmailData createEmailDataFromRaw(String rawText, String rawTarget) {
+        String text = rawText.trim();
+        String target = rawTarget.trim();
+
+        // Xác định isSpam: hỗ trợ "spam"/"ham" theo "1"/"0"
+        Boolean isSpam;
+        String t = target.toLowerCase();
+        if (t.equals("1") || t.equals("spam") || t.equals("true") || t.equals("yes")) {
+            isSpam = true;
+        } else if (t.equals("0") || t.equals("ham") || t.equals("not spam") || t.equals("false") || t.equals("no")) {
+            isSpam = false;
+        } else {
+            isSpam = null;
         }
-        return 0;
+        int featureFree = featuresCheck.containsWord(text, conditionInputFree);
+        int featureStrangeLink = featuresCheck.containsWord(text, conditionInputStrangeLink);
+        int featureUpperCase = featuresCheck.containsUpperCase(text);
+        if (isSpam != null) {
+            return new EmailData(featureFree, featureStrangeLink, featureUpperCase, isSpam);
+        } else {
+            return new EmailData(featureFree, featureStrangeLink, featureUpperCase);
+        }
     }
 
-    // Hàm kiểm tra điều kiện chữ in hoa
-    public int containsUpperCase(String wordsInput){
-        if (wordsInput.isBlank()) return 0;
-        int upperCount = 0;
-        for (int i = 0; i < wordsInput.length(); i++) {
-            char c = wordsInput.charAt(i);
-                if (Character.isUpperCase(c)) {
-                    upperCount++;
+    /**
+     * Lấy giá trị trường theo tên một cách an toàn từ record; trả về empty string nếu không có.
+     */
+    private String safeGet(CSVRecord record, String name) {
+        try {
+            if (record.isSet(name)) {
+                return record.get(name);
             }
+        } catch (IllegalArgumentException e) {
+            System.err.println("Warning: Unable to get value for field '" + name + "'. " + e.getMessage());
         }
-        return (upperCount >= 3) ? 1 : 0;
+        return "";
+    }
+
+
+    public List<EmailData> getDataList() {
+        return dataList;
     }
 
     public static void main(String[] args) throws IOException {
-        ReadFile readFile = new ReadFile();
-        readFile.readFromPath();
+        ReadFile rf = new ReadFile();
+        rf.readFromPath();
+        System.out.println("Đọc được " + rf.getDataList().size() + " bản ghi.");
+        int limit = Math.min(10, rf.getDataList().size());
+        for (int i = 0; i < limit; i++) {
+            System.out.println(rf.getDataList().get(i));
+        }
     }
 }
